Задания по спринту sprint_8-solution-time-and-duration